compile_error.txt


###################### OPENCL PROGRAM BUILD DEBUG OUTPUT ######################

C:\Users\farre\AppData\Local\Temp\comgr-f79756\input\CompileSource:78:21: error: use of undeclared identifier 'layer_target'
    double target = layer_target[x];
                    ^
1 error generated.
Error: Failed to compile source (from CL or HIP source to LLVM IR).
###############################################################################

